reconstruct all notes with more useful info.
写了个chrome插件，把每道题保存成单个md文件，然后写了个python进行分类和索引。

--- a/leetcode-digest/manifest.json
+++ b/leetcode-digest/manifest.json
@@ -19,9 +19,11 @@
 	},
 	"content_scripts": [ {
 		"js": [ "inject.js" ],
-		"matches": ["http://leetcode-cn.com/*", "https://leetcode-cn.com/*"]
+		"matches": ["http://*/*", "https://*/*"]
      } ],
      "permissions": [
+		"http://leetcode-cn.com/",
+        "https://leetcode-cn.com/*",
         "tabs",
         "storage"
     ]
